force-app/main/default/objects/RolesAndResponsibilities__c/RolesAndResponsibilities__c.object-meta.xml
<CustomObject>
    <description>[Business] Roles and Responsibilities defined for all the objects like Opportunity ,Application etc</description>
    <label>Roles and Responsibilities</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles and Responsibilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>