force-app/main/default/objects/RolesAndResponsibilities__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>