force-app/main/default/objects/RolesAndResponsibilities__c/fields/AllowRecordEdit__c.field-meta.xml
<CustomField>
    <fullName>AllowRecordEdit__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>Allow Record Editing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>