force-app/main/default/objects/RolesAndResponsibilities__c/fields/AmendmentRequest__c.field-meta.xml
<CustomField>
    <fullName>AmendmentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amendment Request</label>
    <referenceTo>AmendmentRequest__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>