force-app/main/default/objects/RolesAndResponsibilities__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Announcement__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>