force-app/main/default/objects/RolesAndResponsibilities__c/fields/AnnouncementRole__c.field-meta.xml
<CustomField>
    <fullName>AnnouncementRole__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <description>Used for GOVSBIR</description>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStep</valueSetName>
    </valueSet>
</CustomField>