force-app/main/default/objects/RolesAndResponsibilities__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>