force-app/main/default/objects/RolesAndResponsibilities__c/fields/ApproverAPIName__c.field-meta.xml
<CustomField>
    <fullName>ApproverAPIName__c</fullName>
    <label>Approver API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>