force-app/main/default/objects/RolesAndResponsibilities__c/fields/AssociatedRecordType__c.field-meta.xml
<CustomField>
    <fullName>AssociatedRecordType__c</fullName>
    <description>Whenever adding any new object/field, please make modification to Generic Utility also. The field used in Generic Utility for peer review</description>
    <formula>IF(Program__c!= null , &apos;Program&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Record Type</label>
    <type>Text</type>
</CustomField>