force-app/main/default/objects/RolesAndResponsibilities__c/fields/Award__c.field-meta.xml
<CustomField>
    <fullName>Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award</label>
    <referenceTo>Award__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>