force-app/main/default/objects/RolesAndResponsibilities__c/fields/BusinessRole__c.field-meta.xml
<CustomField>
    <fullName>BusinessRole__c</fullName>
    <description>This is a picklist which will be displayed in RR table in all phases.
Used for GOVSBIR</description>
    <label>Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessRole</valueSetName>
    </valueSet>
</CustomField>