force-app/main/default/objects/RolesAndResponsibilities__c/fields/ClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>ClonedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roles and Responsibilities</label>
    <referenceTo>RolesAndResponsibilities__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>