force-app/main/default/objects/RolesAndResponsibilities__c/fields/Closeout__c.field-meta.xml
<CustomField>
    <fullName>Closeout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closeout</label>
    <referenceTo>Closeout__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>