force-app/main/default/objects/RolesAndResponsibilities__c/fields/CustomApp__c.field-meta.xml
<CustomField>
    <fullName>CustomApp__c</fullName>
    <label>Custom App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Grantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>