force-app/main/default/objects/RolesAndResponsibilities__c/fields/FormsValidated__c.field-meta.xml
<CustomField>
    <fullName>FormsValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Forms Validated?</description>
    <label>Forms Validated ?</label>
    <type>Checkbox</type>
</CustomField>