force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideAnnouncementEdit__c.field-meta.xml
<CustomField>
    <fullName>HideAnnouncementEdit__c</fullName>
    <formula>OR(
  Announcement__r.ReadOnlyOwner__c ,
  IF(
     OR( 
        ISPICKVAL(BusinessRole__c, &apos;Program Reviewer&apos;), 
        ISPICKVAL(BusinessRole__c, &apos;Fiscal Reviewer&apos;),
        ISPICKVAL(BusinessRole__c, &apos;Executive Reviewer&apos;)
     ), 
     HideInitiateReview__c,
     False
  )
)</formula>
    <label>Hide Announcement Edit(Obsolete)</label>
    <type>Checkbox</type>
</CustomField>