force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideDelete__c.field-meta.xml
<CustomField>
    <fullName>HideDelete__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Award__c)), 
  OR(
    ISPICKVAL(BusinessRole__c, &apos;Owner&apos;),
    true,
    Award__r.Grant__r.OwnerId != $User.Id
  ), 
  true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Delete</label>
    <type>Checkbox</type>
</CustomField>