force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideEditBtn__c.field-meta.xml
<CustomField>
    <fullName>HideEditBtn__c</fullName>
    <formula>OR(AND(AmendmentRequest__c!=null,AmendmentRequest__r.HideGranteeEditButton__c),
   AND(Application__c!=null , Application__r.RenderGranteeDelete__c),   
   AND(Announcement__c!=null,HideAnnouncementEdit__c ),
   AND(ProgressReport__c!=null,HideProgressReportEdit__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Edit Btn</label>
    <type>Checkbox</type>
</CustomField>