force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideFDMRolesEdit__c.field-meta.xml
<CustomField>
    <fullName>HideFDMRolesEdit__c</fullName>
    <formula>OR(
  NOT(ISPICKVAL( ReviewStep__r.ReviewApprovalStatus__c , &apos;Created&apos;)),
  $User.Id != ReviewStep__r.Announcement__r.OwnerId
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HideFDMRolesEdit</label>
    <type>Checkbox</type>
</CustomField>