force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideForNonAssignee__c.field-meta.xml
<CustomField>
    <fullName>HideForNonAssignee__c</fullName>
    <formula>Name__c != $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HideForNonAssignee</label>
    <type>Checkbox</type>
</CustomField>