force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideGranteePreAppBtn__c.field-meta.xml
<CustomField>
    <fullName>HideGranteePreAppBtn__c</fullName>
    <formula>OR(
  PreApplication__r.HideOwnerEdit__c ,
  IF(
     OR( 
        ISPICKVAL(BusinessRole__c, &apos;Program Reviewer&apos;), 
        ISPICKVAL(BusinessRole__c, &apos;Fiscal Reviewer&apos;),
        ISPICKVAL(BusinessRole__c, &apos;Executive Reviewer&apos;)
     ), 
     NOT(ISPICKVAL(Status__c, &apos;Assigned&apos;)), 
     False
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Grantee Pre App Btn</label>
    <type>Checkbox</type>
</CustomField>