force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideProgressReportEdit__c.field-meta.xml
<CustomField>
    <fullName>HideProgressReportEdit__c</fullName>
    <formula>ProgressReport__r.ReadOnly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Progress Report Edit</label>
    <type>Checkbox</type>
</CustomField>