force-app/main/default/objects/RolesAndResponsibilities__c/fields/HideSiteVisitEditDelete__c.field-meta.xml
<CustomField>
    <fullName>HideSiteVisitEditDelete__c</fullName>
    <description>Hide Edit delete of roles on Site Visits.</description>
    <formula>IF(ISNULL(SiteVisit__c ), false,SiteVisit__r.HideRolesNewEditDelete__c)</formula>
    <label>HideSiteVisitEditDelete</label>
    <type>Checkbox</type>
</CustomField>