force-app/main/default/objects/RolesAndResponsibilities__c/fields/MasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordId__c</fullName>
    <formula>IF(NOT(ISBLANK(Closeout__c)), Closeout__r.Grant__c, IF(NOT(ISBLANK(Award__c)), Award__r.Grant__c, &apos;NA&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Record Id</label>
    <type>Text</type>
</CustomField>