force-app/main/default/objects/RolesAndResponsibilities__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for GOVSBIR</description>
    <label>Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>