force-app/main/default/objects/RolesAndResponsibilities__c/fields/PageTemplateConfig__c.field-meta.xml
<CustomField>
    <fullName>PageTemplateConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Template Config</label>
    <referenceTo>GNT__PageTemplate__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>RRForms</relationshipName>
    <type>Lookup</type>
</CustomField>