force-app/main/default/objects/RolesAndResponsibilities__c/fields/ParentObjectId__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectId__c</fullName>
    <formula>IF(NOT(ISBLANK(AmendmentRequest__c)), AmendmentRequest__c, IF(NOT(ISBLANK(Application__c)), Application__c, IF(NOT(ISBLANK(PaymentRequest__c)), PaymentRequest__c, IF(NOT(ISBLANK(Award__c)), Award__c, IF(NOT(ISBLANK(Closeout__c)), Closeout__c, IF(NOT(ISBLANK(Announcement__c)), Announcement__c,
IF(NOT(ISBLANK(PreApplication__c)), PreApplication__c, IF(NOT(ISBLANK(Program__c)), Program__c, IF(NOT(ISBLANK(ProgressReport__c)), ProgressReport__c, IF(NOT(ISBLANK(RiskAssessment__c)), RiskAssessment__c, IF(NOT(ISBLANK(SiteVisit__c)), SiteVisit__c, IF(NOT(ISBLANK(ReviewStep__c)), ReviewStep__c, null))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentObjectId</label>
    <type>Text</type>
</CustomField>