force-app/main/default/objects/RolesAndResponsibilities__c/fields/ParentType__c.field-meta.xml
<CustomField>
    <fullName>ParentType__c</fullName>
    <defaultValue>&quot;Master&quot;</defaultValue>
    <label>ParentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>