force-app/main/default/objects/RolesAndResponsibilities__c/fields/PaymentRequest__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Request</label>
    <referenceTo>PaymentRequest__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>PaymentRequestResponsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>