force-app/main/default/objects/RolesAndResponsibilities__c/fields/PostAwardReportingRole__c.field-meta.xml
<CustomField>
    <fullName>PostAwardReportingRole__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Post Award Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStep</valueSetName>
    </valueSet>
</CustomField>