force-app/main/default/objects/RolesAndResponsibilities__c/fields/PreApplication__c.field-meta.xml
<CustomField>
    <fullName>PreApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pre-Application to which this Role and Responsibility belongs</description>
    <label>Pre-Application</label>
    <referenceTo>PreApplication__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>