force-app/main/default/objects/RolesAndResponsibilities__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to populate the Program to which this Role and and Responsibility belongs</description>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>