force-app/main/default/objects/RolesAndResponsibilities__c/fields/ProgramRole__c.field-meta.xml
<CustomField>
    <fullName>ProgramRole__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>Solicitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStep</valueSetName>
    </valueSet>
</CustomField>