force-app/main/default/objects/RolesAndResponsibilities__c/fields/ProgressReport__c.field-meta.xml
<CustomField>
    <fullName>ProgressReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Report</label>
    <referenceTo>ProgressReports__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities (Progress Report)</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities1</relationshipName>
    <type>Lookup</type>
</CustomField>