force-app/main/default/objects/RolesAndResponsibilities__c/fields/ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly__c</fullName>
    <formula>NOT(ISNULL(ProgressReport__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>