force-app/main/default/objects/RolesAndResponsibilities__c/fields/RecordApiName__c.field-meta.xml
<CustomField>
    <fullName>RecordApiName__c</fullName>
    <label>Record Api Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>