force-app/main/default/objects/RolesAndResponsibilities__c/fields/RecordEdited__c.field-meta.xml
<CustomField>
    <fullName>RecordEdited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Edited</label>
    <type>Checkbox</type>
</CustomField>