force-app/main/default/objects/RolesAndResponsibilities__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <description>Used for GOVSBIR</description>
    <inlineHelpText>Specify the responsibility for this role.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>