force-app/main/default/objects/RolesAndResponsibilities__c/fields/ReviewerRole__c.field-meta.xml
<CustomField>
    <fullName>ReviewerRole__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fiscal Reviewer</fullName>
                <label>Procurement Reviewer</label>
            </value>
            <value>
                <fullName>Program Reviewer</fullName>
                <default>true</default>
                <label>Program Reviewer</label>
            </value>
            <value>
                <fullName>Legal Reviewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>