force-app/main/default/objects/RolesAndResponsibilities__c/fields/ReviewStep__c.field-meta.xml
<CustomField>
    <fullName>ReviewStep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Step</label>
    <referenceTo>ReviewStep__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>RolesAndResponsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>