force-app/main/default/objects/RolesAndResponsibilities__c/fields/RiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>RiskAssessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Assessment</label>
    <referenceTo>RiskAssessment__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>