force-app/main/default/objects/RolesAndResponsibilities__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Step 1</fullName>
            </value>
            <value>
                <fullName>Step 2</fullName>
            </value>
            <value>
                <fullName>Step 3</fullName>
            </value>
            <value>
                <fullName>Step 4</fullName>
            </value>
            <value>
                <fullName>Grant Staff</fullName>
            </value>
            <value>
                <fullName>Program Approver</fullName>
            </value>
            <value>
                <fullName>Program Reviewer</fullName>
            </value>
            <value>
                <fullName>Fiscal Approver</fullName>
            </value>
            <value>
                <fullName>Fiscal Reviewer</fullName>
            </value>
            <value>
                <fullName>Legal Approver</fullName>
            </value>
            <value>
                <fullName>Executive Approver</fullName>
            </value>
            <value>
                <fullName>Grants Administrator</fullName>
            </value>
            <value>
                <fullName>Key POC</fullName>
            </value>
            <value>
                <fullName>SME Reviewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>