force-app/main/default/objects/RolesAndResponsibilities__c/fields/RoleApiName__c.field-meta.xml
<CustomField>
    <fullName>RoleApiName__c</fullName>
    <label>RoleApiName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>