force-app/main/default/objects/RolesAndResponsibilities__c/fields/ServiceArea__c.field-meta.xml
<CustomField>
    <fullName>ServiceArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Area</label>
    <referenceTo>ServiceArea__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>RolesandResponsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>