force-app/main/default/objects/RolesAndResponsibilities__c/fields/SiteVisit__c.field-meta.xml
<CustomField>
    <fullName>SiteVisit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit</label>
    <referenceTo>SiteVisit__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>