force-app/main/default/objects/RolesAndResponsibilities__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Sent for Review</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>