force-app/main/default/objects/RolesAndResponsibilities__c/fields/StrategicPlan__c.field-meta.xml
<CustomField>
    <fullName>StrategicPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Plan</label>
    <referenceTo>StrategicPlan__c</referenceTo>
    <relationshipLabel>Roles and Responsibilities</relationshipLabel>
    <relationshipName>Roles_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>