force-app/main/default/objects/RolesAndResponsibilities__c/fields/TaskCreated__c.field-meta.xml
<CustomField>
    <fullName>TaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if a task is created for the role.</description>
    <label>Task Created</label>
    <type>Checkbox</type>
</CustomField>