force-app/main/default/objects/RolesAndResponsibilities__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROGRAM_INTERNAL</fullName>
            </value>
            <value>
                <fullName>ANNOUNCEMENT_GRANTEE</fullName>
            </value>
            <value>
                <fullName>ANNOUNCEMENT_GRANTOR</fullName>
            </value>
            <value>
                <fullName>REVIEW_STEP</fullName>
            </value>
            <value>
                <fullName>PRE_APPLICATION_GRANTEE</fullName>
            </value>
            <value>
                <fullName>PRE_APPLICATION_GRANTOR</fullName>
            </value>
            <value>
                <fullName>APPLICATION_GRANTEE</fullName>
            </value>
            <value>
                <fullName>APPLICATION_GRANTOR</fullName>
            </value>
            <value>
                <fullName>AWARD_GRANTEE</fullName>
            </value>
            <value>
                <fullName>AWARD_GRANTOR</fullName>
            </value>
            <value>
                <fullName>CHANGE_REQUEST_GRANTEE</fullName>
            </value>
            <value>
                <fullName>CHANGE_REQUEST_GRANTOR</fullName>
            </value>
            <value>
                <fullName>FISCAL_REPORT_GRANTEE</fullName>
            </value>
            <value>
                <fullName>FISCAL_REPORT_GRANTOR</fullName>
            </value>
            <value>
                <fullName>PROGRAM_REPORT_GRANTEE</fullName>
            </value>
            <value>
                <fullName>PROGRAM_REPORT_GRANTOR</fullName>
            </value>
            <value>
                <fullName>SITE_VISIT_GRANTEE</fullName>
            </value>
            <value>
                <fullName>SITE_VISIT_GRANTOR</fullName>
            </value>
            <value>
                <fullName>SITE_VISIT_PROGRAM_GRANTEE</fullName>
            </value>
            <value>
                <fullName>SITE_VISIT_PROGRAM_GRANTOR</fullName>
            </value>
            <value>
                <fullName>SITE_VISIT_FISCAL_GRANTEE</fullName>
            </value>
            <value>
                <fullName>SITE_VISIT_FISCAL_GRANTOR</fullName>
            </value>
            <value>
                <fullName>PAYMENT_REQUEST_GRANTOR</fullName>
            </value>
            <value>
                <fullName>RISK_ASSESSMENT_GRANTOR</fullName>
            </value>
            <value>
                <fullName>CLOSEOUT_GRANTEE</fullName>
            </value>
            <value>
                <fullName>CLOSEOUT_GRANTOR</fullName>
            </value>
            <value>
                <fullName>PROGRESS_REPORT_GRANTOR</fullName>
            </value>
            <value>
                <fullName>PROGRESS_REPORT_GRANTEE</fullName>
            </value>
            <value>
                <fullName>AMENDMENT_REQUEST_3_APPROVALS</fullName>
            </value>
            <value>
                <fullName>AMENDMENT_REQUEST_GRANTOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>